plugins {
    id 'java'
    id "com.diffplug.spotless" version "6.20.0"
}

spotless {
    java {
        googleJavaFormat().aosp().reflowLongStrings()
    }
    format 'misc', {
        target '**/*.gradle', '**/*.md', '**/.gitignore'
        indentWithSpaces()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

repositories {
    mavenCentral()
}
subprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'

    version '0.1-SNAPSHOT'

    group 'art.limitium.sofa'

    sourceCompatibility = 1.17


    repositories {
        mavenCentral()
    }

    publishing {
        repositories {
            maven {
                url = MAVEN_REPO
                credentials {
                    username = REPO_USER
                    password = REPO_TOKEN
                }
            }
        }
        publications {
            production(MavenPublication) {
                artifactId "${rootProject.name}-${project.name}"
                from components.java
            }
        }
        java {
            withSourcesJar()
        }
    }
}

tasks{
    build {
        dependsOn 'spotlessApply'
    }
    test {
        dependsOn 'spotlessCheck'
    }
}
